ajout class footer

--- a/fr/autres_projets.html
+++ b/fr/autres_projets.html
@@ -225,7 +225,7 @@
                     <img src="/public/icones/git.svg" alt="logo git hub" class="footer__reseau--image">
                 </a>
             </li>
-            <li class="footer__reseau--lien">
+            <li class="footer__reseau--lien mmi">
                 <a href="https://mmi-montbeliard.nathanvanbignootvincler.fr/">
                     <img src="/public/icones/logo_mmi.png" alt="logo mmi" class="footer__reseau--image">
                 </a>
