--- a/fr/musique.html
+++ b/fr/musique.html
@@ -151,7 +151,7 @@
             En l'entendant on sait qu'on est transporté dans un monde fantastique, et non réel ou "futuriste" comme avec les musiques de Hans Zimmer pour Inception ou Interstellar. C'est cette patte caractéristique qui définit le travail de Howard Shore et les films, avec des rappels de certains morceaux dans d'autres. 
             Par exemple, au début on peut retrouver une version moins épique de la musique "Balin's tomb" mais qui donne un avant-gout du plaisir auditif que l'on va prendre dans une des scènes les plus impressionnante du premier film.
         </p>
-        <a href="/fr/musique.html" class="page__article--btn">
+        <a href="/fr/livres.html" class="page__article--btn">
             Tolkien et ses livres
             <img src="/public/icones/chevron_right.svg" alt="fleche">
         </a>
@@ -226,7 +226,7 @@
                     <img src="/public/icones/git.svg" alt="logo git hub" class="footer__reseau--image">
                 </a>
             </li>
-            <li class="footer__reseau--lien">
+            <li class="footer__reseau--lien mmi">
                 <a href="https://mmi-montbeliard.nathanvanbignootvincler.fr/">
                     <img src="/public/icones/logo_mmi.png" alt="logo mmi" class="footer__reseau--image">
                 </a>
