fin 4 premier articles html plus video hebergée

--- a/fr/a_propos.html
+++ b/fr/a_propos.html
@@ -10,8 +10,7 @@
 </head>
 <body x-data="{expanded: false}" :class="{noscroll: expanded}">
 
-
-    <header class="header">
+    <header class="page__header">
         <div class="header__bande">
             <a href="/fr/index.html">
                 <img 
