--- a/fr/anecdotes.html
+++ b/fr/anecdotes.html
@@ -130,7 +130,7 @@
                     alt="aragorn casse son doigt de pied"
                     class="box__img">
                 <p class="media__descriptif">
-                    Aragorn - La communauté de l'anneau
+                    Aragorn - Les deux tours
                 </p>
                 <p class="box__texte">
                     Certainement l'anecdote la plus connue mais comment passer à côté ? Dans le deuxième film, Aragorn est en colère et shoot dans un casque et hurle, et ce pour une bonne raison, en réalité, Viggo Mortensen, l'acteur, c'est casser un doigt de pied, c'est donc un réel cri de douleur qu'il pousse et non du "cinéma".
