--- a/fr/films.html
+++ b/fr/films.html
@@ -133,10 +133,19 @@
                 Tous ? non, car à la fin des années 90, un homme va tenter ce pari fou : Peter Jackson ! À leur sortie, les films vont être un véritable succès grâce à leur tournage gigantesque et les effets digitaux alors nouveaux, et vont directement devenir des chefs d'œuvres, et ce n'est pas la moindre des choses avec un budget de 93 millions de dollars ! le total des recettes de la trilogie sera alors de presque 3 millions d'euros, a l'époque il était donc le deuxième film le plus rentable derrière Titanic.             
             </p>
             <p class="page__article--texte">
-                Tout au long des films, on suit donc Frodon et la communauté de l'anneau, qui ont pour mission d'aller en Mordor pour le détruire. On traverse alors les différents royaumes de la terre du milieu, on découvre leurs peuples, leurs traditions, leur histoire et leur culture. Cette quête passe donc par un grand voyage, des rencontres plus ou moins inattendues, des alliés et des ennemis et des batailles stratégiques qui sont mythiques et inoubliables ! Toute personne qui a vu une fois la charge des Rohirrims s'en rappel grâce à ses visuels magnifiques, sa musique et le discours iconique du Roi Théoden ! D'ailleurs je vous la remets car une fois de plus n'est jamais de trop :           
+                Tout au long des films, on suit donc Frodon et la communauté de l'anneau, qui ont pour mission d'aller en Mordor pour le détruire. On traverse alors les différents royaumes de la terre du milieu, on découvre leurs peuples, leurs traditions, leur histoire et leur culture. Cette quête passe donc par un grand voyage, des rencontres plus ou moins inattendues, des alliés et des ennemis et des batailles stratégiques qui sont mythiques et inoubliables ! De même pour temps d'autres scènes qui sont justes magnifiques et impressionnantes, quelque soit le nombre de fois qu'on les à vu !           
             </p>
-            <video src="" class="page__article--video"></video>
-            <p class="media__descriptif">Charge des Rohirrims - Le Retour du roi</p>
+            <video 
+                src="https://j-roy.fr/video/lotr_extrait.mp4" 
+                poster="/public/img/accueil.webp"
+                class="page__article--video" 
+                controls 
+                controlslist="nodownload noremoteplayback">
+            </video>
+            <!--la video ici presente n'est pas celle voulue à la base mais en raison d'un poids trop important, j'ai du changé. 
+                (surement du au combo temps/qualité), et je ne voulais pas passé par un lien youtube mais garder les contraintes.-->
+
+            <p class="media__descriptif">La beauté des films</p>
             <h2 class="page__header--chapo">
                 Piliers du cinéma moderne, retour sur cette trilogie qui a marqué cette industrie et sur son tournage.            
             </h2>
