--- a/fr/films.html
+++ b/fr/films.html
@@ -140,7 +140,7 @@
                 poster="/public/img/accueil.webp"
                 class="page__article--video" 
                 controls 
-                controlslist="nodownload noremoteplayback">
+                controlslist="nodownload ">
             </video>
             <!--la video ici presente n'est pas celle voulue à la base mais en raison d'un poids trop important, j'ai du changé. 
                 (surement du au combo temps/qualité), et je ne voulais pas passé par un lien youtube mais garder les contraintes.-->
