--- a/fr/livres.html
+++ b/fr/livres.html
@@ -10,7 +10,9 @@
     <script src="https://unpkg.com/alpinejs" defer></script>
 
 </head>
-<body x-data="{expanded: false}" :class="{noscroll: expanded}">
+<body 
+    x-data="{expanded: false}" 
+    :class="{noscroll: expanded}">
 
 
     <header class="header">
@@ -279,7 +281,7 @@
                     </div>
 
                 </div>
-                <ul class="caroussel__liste">
+                <ul class="carrousel__liste">
                     <li>
                         <a 
                             href="#ecran-1" 
