--- a/fr/differences.html
+++ b/fr/differences.html
@@ -129,60 +129,70 @@
                     src="/public/img/tom_bombadil.webp" 
                     alt="Tom Bombadil"
                     class="box__img">
-                <p class="media__descriptif">
-                    Illustration de Tom Bombadil
-                </p>
-                <p class="box__texte">
-                    Tom Bombadil, un des plus grands mystères des livres. Quand Frodon, Sam, Pippin et Merry le croisent on apprend qu'il existe depuis des temps très anciens, plus que ce que l'on peut s'imaginer. On se rend compte aussi que l'anneau na aucun impact sur lui, et qu'il est un être magique surpuissant, Qui préfère passer une vie simple dans sa forêt. Pour les lecteurs, son absence est dommage, cependant elle reste logique car dans un film ce passage aurait duré longtemps et aurait plus troublé le spectateur qu'apporter quelque chose a l'histoire vu la complexité du personnage.
-                </p>
+                <div class="box__texte">    
+                    <p class="media__descriptif">
+                        Illustration de Tom Bombadil
+                    </p>
+                    <p class="box__texte--fact">
+                        Tom Bombadil, un des plus grands mystères des livres. Quand Frodon, Sam, Pippin et Merry le croisent on apprend qu'il existe depuis des temps très anciens, plus que ce que l'on peut s'imaginer. On se rend compte aussi que l'anneau na aucun impact sur lui, et qu'il est un être magique surpuissant, Qui préfère passer une vie simple dans sa forêt. Pour les lecteurs, son absence est dommage, cependant elle reste logique car dans un film ce passage aurait duré longtemps et aurait plus troublé le spectateur qu'apporter quelque chose a l'histoire vu la complexité du personnage.
+                    </p>
+                </div>
             </div>
             <div class="box">
                 <img 
                     src="/public/img/gouffre_helm.webp" 
                     alt="gouffre de helm"
                     class="box__img">
-                <p class="media__descriptif">
-                    Gouffre de Helm - Les deux tours
-                </p>
-                <p class="box__texte">
-                    On a tous ce souvenir de la bataille du gouffre de Helm, avec les hommes bloqués dans le fort, et les elfes qui viennent les aider. Et pourtant, dans les livres, ils ne viennent pas. Dans le livre, la bataille est donc plus intense à cause du nombre de combattants qui est alors divisé par deux. Mais on ne va pas se mentir, cela offre un très beau spectacle pour les yeux.
-                </p>
+                <div class="box__texte">    
+                    <p class="media__descriptif">
+                        Gouffre de Helm - Les deux tours
+                    </p>
+                    <p class="box__texte--fact">
+                        On a tous ce souvenir de la bataille du gouffre de Helm, avec les hommes bloqués dans le fort, et les elfes qui viennent les aider. Et pourtant, dans les livres, ils ne viennent pas. Dans le livre, la bataille est donc plus intense à cause du nombre de combattants qui est alors divisé par deux. Mais on ne va pas se mentir, cela offre un très beau spectacle pour les yeux.
+                    </p>
+                </div>
             </div>
             <div class="box">
                 <img 
                     src="/public/img/image_beacons.webp" 
                     alt="feux d'alarme"
                     class="box__img">
-                <p class="media__descriptif">
-                    Feu d'alarme - Le retour du roi
-                </p>
-                <p class="box__texte">
-                    Pour moi une des plus belle scènes des films, quand Pippin allume les feux d'alarme et que l'on parcourt les montagnes pour suivre le signal se propager et demander de l'aide, le tout sur une musique épique. En réalité cette scène n'aurait pas de l'avoir lieu car les feux d'alarmes sont déjà allumés avant que Pippin et Gandalf arrivent à Minas Tirith. Sans vouloir se mentir, cette modification a été adoré par la plupart des fans pour sa beauté et la démonstration de talent de Peter Jackson à faire adorer des séquences avec uniquement des paysages.
-                </p>
+                <div class="box__texte">    
+                    <p class="media__descriptif">
+                        Feu d'alarme - Le retour du roi
+                    </p>
+                    <p class="box__texte--fact">
+                        Pour moi une des plus belle scènes des films, quand Pippin allume les feux d'alarme et que l'on parcourt les montagnes pour suivre le signal se propager et demander de l'aide, le tout sur une musique épique. En réalité cette scène n'aurait pas de l'avoir lieu car les feux d'alarmes sont déjà allumés avant que Pippin et Gandalf arrivent à Minas Tirith. Sans vouloir se mentir, cette modification a été adoré par la plupart des fans pour sa beauté et la démonstration de talent de Peter Jackson à faire adorer des séquences avec uniquement des paysages.
+                    </p>
+                </div>
             </div>
             <div class="box">
                 <img 
                     src="/public/img/hobbiton.webp" 
                     alt="hobbiton"
                     class="box__img">
-                <p class="media__descriptif">
-                    Village d'Hobbiton
-                </p>
-                <p class="box__texte">
-                    La fin du seigneur des anneaux dans les films et très joyeuse, et pourtant une autre guerre n'est pas mentionnée mais présente dans les livres : celle de la comté. Dans les livres, Saroumane, après la bataille en Isengard, fuit et rejoint la comté pour la réduire en esclavage pendant que la communauté se bat au Gondor. C'est à leur retour que les hobbits vont alors lancer une révolte et reprendre le contrôle de leur pays et que Saroumane sera trahi et tué par Grima. Vu la longueur de ce passage dans le livre je n'ose pas imaginer en film, surtout que cela aurait donné une rendu bizarre au film avec une histoire après la fin de la principale.
-                </p>
+                <div class="box__texte">    
+                    <p class="media__descriptif">
+                        Village d'Hobbiton
+                    </p>
+                    <p class="box__texte--fact">
+                        La fin du seigneur des anneaux dans les films et très joyeuse, et pourtant une autre guerre n'est pas mentionnée mais présente dans les livres : celle de la comté. Dans les livres, Saroumane, après la bataille en Isengard, fuit et rejoint la comté pour la réduire en esclavage pendant que la communauté se bat au Gondor. C'est à leur retour que les hobbits vont alors lancer une révolte et reprendre le contrôle de leur pays et que Saroumane sera trahi et tué par Grima. Vu la longueur de ce passage dans le livre je n'ose pas imaginer en film, surtout que cela aurait donné une rendu bizarre au film avec une histoire après la fin de la principale.
+                    </p>
+                </div>
             </div>
             <div class="box">
                 <img 
                     src="/public/img/image_grey_havens.webp" 
                     alt="havres gris"
                     class="box__img">
-                <p class="media__descriptif">
-                    Les havres gris - Le retour du roi
-                </p>
-                <p class="box__texte">
-                    Pour terminer ces différences, parlons d'une des toutes dernières scènes, avec les adieux de Frodon et le début de son voyage. Il s'agit plus d'une information bonus mais dans les livres, Tolkien nous dit que plus tard, Sam reçoit une autorisation et rejoint Frodon à Valinor. Ils seront alors rejoints par Gimli et Legolas.
-                </p>
+                <div class="box__texte">    
+                    <p class="media__descriptif">
+                        Les havres gris - Le retour du roi
+                    </p>
+                    <p class="box__texte--fact">
+                        Pour terminer ces différences, parlons d'une des toutes dernières scènes, avec les adieux de Frodon et le début de son voyage. Il s'agit plus d'une information bonus mais dans les livres, Tolkien nous dit que plus tard, Sam reçoit une autorisation et rejoint Frodon à Valinor. Ils seront alors rejoints par Gimli et Legolas.
+                    </p>
+                </div>
             </div>
         </article>
 
