css autres projets + corrections

--- a/fr/autres_projets.html
+++ b/fr/autres_projets.html
@@ -141,8 +141,8 @@
                             class="projet__block--img">
                         <div class="projet__block--infos">
                             <h3 class="projet__block--titre" x-text="infos.projet">Nom du projet</h3>
-                            <p class="projet__block--eleve" x-text="infos.Nom">Nom</p>
-                            <p class="projet__block--eleve" x-text="infos.Prenom">Prénom</p>
+                            <p class="projet__block--nom" x-text="infos.Nom">Nom</p>
+                            <p class="projet__block--prenom" x-text="infos.Prenom">Prénom</p>
                             <a 
                                 :href="infos.href"
                                 class="projet__block--lien">
