--- a/fr/differences.html
+++ b/fr/differences.html
@@ -9,7 +9,7 @@
     <script defer src="https://unpkg.com/alpinejs@3.x.x/dist/cdn.min.js"></script>
 </head>
 <body x-data="{expanded: false}" :class="{noscroll: expanded}">
-
+je suis un f-, humain
 
     <header class="header">
         <div class="header__bande">
@@ -173,7 +173,7 @@
                     class="box__img">
                 <div class="box__texte">    
                     <p class="media__descriptif">
-                        Village d'Hobbiton
+                        Village d'Hobbitbourg
                     </p>
                     <p class="box__texte--fact">
                         La fin du seigneur des anneaux dans les films et très joyeuse, et pourtant une autre guerre n'est pas mentionnée mais présente dans les livres : celle de la comté. Dans les livres, Saroumane, après la bataille en Isengard, fuit et rejoint la comté pour la réduire en esclavage pendant que la communauté se bat au Gondor. C'est à leur retour que les hobbits vont alors lancer une révolte et reprendre le contrôle de leur pays et que Saroumane sera trahi et tué par Grima. Vu la longueur de ce passage dans le livre je n'ose pas imaginer en film, surtout que cela aurait donné une rendu bizarre au film avec une histoire après la fin de la principale.
