--- a/fr/glossaire.html
+++ b/fr/glossaire.html
@@ -123,73 +123,73 @@
                 Sont répertoriés ici les différents mots pouvant nécessiter une définition plus claire et précise :
             </h2>
             <dl class="glossaire">
-                <dt>- Mordor :</dt>
-                <dd>
+                <dt class="glossaire__mot">- Mordor :</dt>
+                <dd class="glossaire__def">
                     Pays sombre de la terre du milieu où habite Sauron, la menace du livre 
                 </dd>
 
-                <dt>- Terre du milieu :</dt>
-                <dd>
+                <dt class="glossaire__mot">- Terre du milieu :</dt>
+                <dd class="glossaire__def">
                     Continent créé par Tolkien et où se déroule l'histoire. 
                 </dd>
 
-                <dt>- Communauté de l'anneau :</dt>
-                <dd>
+                <dt class="glossaire__mot">- Communauté de l'anneau :</dt>
+                <dd class="glossaire__def">
                     Groupe de 9 personnes chargées de détruire l'anneau unique.
                 </dd>
 
-                <dt>- Gandalf :</dt>
-                <dd>
+                <dt class="glossaire__mot">- Gandalf :</dt>
+                <dd class="glossaire__def">
                     Un des 5 magiciens de la terre du milieu, il guide la communauté dans sa quête et conseil les gens à travers la terre du milieu.
                 </dd>
 
-                <dt>- Théoden : </dt>
-                <dd>
+                <dt class="glossaire__mot">- Théoden : </dt>
+                <dd class="glossaire__def">
                     Roi du Rohan, personnage important dans les films 2 et 3. 
                 </dd>
 
-                <dt>- Gollum :</dt>
-                <dd>
+                <dt class="glossaire__mot">- Gollum :</dt>
+                <dd class="glossaire__def">
                     Créature consumées par l'anneau qui rode en terre du milieu et qui sert de guide à Sam et Frodon, avant il était humain et faisait parti d’une espèces proche des Hobbits, il s’appelait Sméagol. 
                 </dd>
 
-                <dt>- Fondcombe :</dt>
-                <dd>
+                <dt class="glossaire__mot">- Fondcombe :</dt>
+                <dd class="glossaire__def">
                     Une des villes des elfes, dans le nord de la terre du milieu, où est créée la communauté de l'anneau. 
                 </dd>
 
-                <dt>- Rohirrims :</dt>
-                <dd>
+                <dt class="glossaire__mot">- Rohirrims :</dt>
+                <dd class="glossaire__def">
                     Peuple du Rohan, ils sont connus pour être de grands cavaliers.
                 </dd>
 
-                <dt>- Figurant :</dt>
-                <dd>
+                <dt class="glossaire__mot">- Figurant :</dt>
+                <dd class="glossaire__def">
                     Personne qui est sur le tournage du film et fait des apparitions dans les foules ou les batailles, il n'a généralement pas de texte à dire.
                 </dd>
 
-                <dt>- Meme :</dt>
-                <dd>
+                <dt class="glossaire__mot">- Meme :</dt>
+                <dd class="glossaire__def">
                     Image ou vidéo détournée pour faire rire, souvent utilisé sur internet.
                 </dd>
 
-                <dt>- Oscar :</dt>
-                <dd>
+                <dt class="glossaire__mot">- Oscar :</dt>
+                <dd class="glossaire__def">
                     Plus grande récompense/distinction au cinéma. 
                 </dd>
 
-                <dt>- Aragorn :</dt>
-                <dd>
+                <dt class="glossaire__mot">- Aragorn :</dt>
+                <dd class="glossaire__def">
                     Membre de la communauté de l'anneau et futur roi du Gondor. 
                 </dd>
 
-                <dt>- Saroumane :</dt>
-                <dd>
+                <dt class="glossaire__mot">- Saroumane :</dt>
+                <dd class="glossaire__def">
                     Magicien corrompu par Sauron, il est le chef du conseil blanc et est le chef des magiciens.
                 </dd>
 
-                <dt>- Boromir :</dt>
-                <dd>
+                <dt class="glossaire__mot">- Boromir :</dt>
+                <dd class="glossaire__def">
                     Membre de la communauté de l'anneau et homme du Gondor, il est le fils préféré de l'intandant du Gondor.
                 </dd>
             </dl>
