--- a/en/director.html
+++ b/en/director.html
@@ -106,3 +106,86 @@
             </nav>
         </div>
     </header>
+
+
+
+
+
+    <footer class="footer">
+        <a href="/en/index.html" 
+           class="footer__logo">
+            <img 
+                src="/public/icones/logo_site.svg" 
+                alt="logo site"
+                class="footer__logo--image">
+        </a>
+        <ul class="footer__liste">
+            <li class="footer__liste--liens">
+                <a href="/en/contact.html"
+                   class="footer__liste--textes">
+                    Contact
+                </a> 
+            </li>
+            <li class="footer__liste--liens">
+                <a href="/en/about.html"
+                   class="footer__liste--textes">
+                    About
+                </a>
+            </li>
+            <li class="footer__liste--liens">
+                <a href="/en/glossary.html"
+                   class="footer__liste--textes">
+                    Glossary
+                </a>
+            </li>
+            <li class="footer__liste--liens">
+                <a href="/en/other_projects.html"
+                   class="footer__liste--textes">
+                    Other projects
+                </a>
+            </li>     
+        </ul>
+        <div class="footer__mentions">
+            <p class="footer__mentions--texte">
+                Project carried out as part of an educational exercise at the
+                <a href="https://mmi-montbeliard.nathanvanbignootvincler.fr/"
+                   class="footer__mentions--liens">
+                    <strong><i>MMI department of Montbéliard</i></strong>
+                </a>
+            </p>   
+        </div>
+        <div class="footer__infos">
+            <p class="footer__infos--moi">
+                Roy Jérémy MMI 1 - B2 
+            </p>
+            <a href="mailto:jeremy.roy25200@gmail.com"
+               class="footer__infos--mail">
+                    jeremy.roy25200@gmail.com
+            </a>
+        </div>
+        <ul class="footer__reseau">
+            <li class="footer__reseau--lien">
+                <a href="https://open.spotify.com/playlist/6RgXVuk0K38IlhWhVALjco?si=c5ac6ac468544caf">
+                    <img src="/public/icones/spotify.svg" alt="logo spotify" class="footer__reseau--image">
+                </a>
+            </li>
+            <li class="footer__reseau--lien">
+                <a href="https://instagram.com/jerem_roy?igshid=OGQ5ZDc2ODk2ZA==">
+                    <img src="/public/icones/instagram.svg" alt="logo instagram" class="footer__reseau--image">
+                </a>
+            </li>
+            <li class="footer__reseau--lien">
+                <a href="https://github.com/Jeremy-ROY-22">
+                    <img src="/public/icones/git.svg" alt="logo git hub" class="footer__reseau--image">
+                </a>
+            </li>
+            <li class="footer__reseau--lien mmi">
+                <a href="https://mmi-montbeliard.nathanvanbignootvincler.fr/">
+                    <img src="/public/icones/logo_mmi.png" alt="logo mmi" class="footer__reseau--image">
+                </a>
+            </li>
+        </ul>
+    
+    </footer>
+</body>
+</html>
