modif css index anglais

--- a/fr/index.html
+++ b/fr/index.html
@@ -110,7 +110,10 @@
 
     <main class="page">
         <header class="page__header">
-            <img src="/public/img/accueil.webp" alt="image trou de hobbit" class="page__header--img">
+            <img 
+                src="/public/img/accueil.webp" 
+                alt="image trou de hobbit" 
+                class="page__header--img">
             <h1 class="page__header--titre">
                 Articles Principaux
             </h1>        
