traduction article replique

--- a/en/line.html
+++ b/en/line.html
@@ -108,6 +108,50 @@
     </header>
 
 
+    <main class="page">
+        <header class="page__header">
+            <img src="/public/img/accueil.webp" alt="image hobbit hole" class="page__header--img">
+            <h1 class="page__header--titre">
+                Mordor Gandalf, is it left or right ?
+            </h1>
+            
+        </header>
+        <article class="page__article">
+            <h2 class="page__header--chapo">
+                The Lord of the Rings, it's cult lines throughout the films !
+            </h2>
+            <img 
+                src="/public/img/gandalf_moria.webp" 
+                alt="gandalf mines moria"
+                class="page__article--image">
+            <p class="media__descriptif">Gandalf in the mines of Moria</p>
+            <p class="page__article--texte">
+                Anyone who has seen the films is bound to remember one of the many lines that have become cult favourites. In fact, even someone who hasn't seen the films will have heard one, because they're so commonly used, like Gandalf's famous "You shall not pass !" or Gollum's "My precious". And it is these lines that have reinforced the power of the films in their most iconic and unforgettable moments, thanks to Tolkien's perfect and impactful writing of the books.            
+            </p>
+            <h2 class="page__header--chapo">
+                What if the community had gone right instead of left?
+            </h2>
+            <img 
+                src="/public/img/carte_middle_earth.webp" 
+                alt="middle earth map"
+                class="page__article--image">
+            <p class="media__descriptif">Map of Middle earth</p>
+            
+            <p class="page__article--texte">
+                No one has ever really developed this question, people have preferred to argue about logical questions and sterile debates like:
+                "Why didn't they take the eagles? 
+                Don't ever ask a fan that question for fear of ending up being beaten with an axe, because it's so annoying... 
+                Anyway, let's stop digressing and get back to the subject. What would have happened if Frodo had taken the right road instead of the left? 
+                In fact, the answer is quite simple. From the various scenes, we can see that there is only one entrance to Rivendell for visitors, via the bridge. You might ask yourself, "But why doesn't he know the way if he's arrived here?" Well, it's simple: he's the only member of the ring community to have arrived unconscious among the elves. So he's the only one who didn't know that the right-hand path would take him home, because that's the path they took, and so he asks Gandalf.
+                It's a scene that always makes you smile because of the lightness it brings to the film and serves to accentuate the immersion in the story.
+            </p>
+            <a href="/en/films.html" class="page__article--btn">
+                Les films
+                <img src="/public/icones/chevron_right.svg" alt="arrow">
+            </a>
+        </article>
+
+    </main>
 
 
 
